tests/ui/attributes/z-crate-attr/inner-attr.rs
//@ compile-flags: -Zcrate-attr=#![feature(foo)]

fn main() {}

//~? ERROR expected identifier, found `#`
